<resources>
    <string name="app_name">Risk Manager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_get_access_token">GetAccessToken</string>
    <string name="title_activity_new_asset">Novo Ativo</string>
    <string name="save">Salvar</string>

    <string name="enviroment">RM_240</string>
    <string name="enviroment_url">https://demo.riskmanager.modulo.com/RM_240</string>
    <string name="client_id">7fbece65dc0447f7824c589f1f86e0eb</string>
    <string name="client_secret">1504e09e14f14bd5a749652d40652473</string>
    <string name="redirect_uri">calls://auth</string>
    <string name="grant_type">authorization_code</string>
    <string name="token_url">https://demo.riskmanager.modulo.com/RM_240/APIIntegration/Token</string>
    <string name="oauth_url">https://demo.riskmanager.modulo.com/RM_240/APIIntegration/AuthorizeFeatures</string>
    <string name="info_url">https://demo.riskmanager.modulo.com/RM_240/api/info/me</string>
    <string name="info_profile_url">https://demo.riskmanager.modulo.com/RM_240/api/info/me/profiles</string>

    <string name="title_activity_geo_location_test">GeoLocationTest</string>
    <string name="ok">OK</string>

    <string name="asset_name_label">Nome do ativo:</string>

    <string name="asset_type_label">Tipo de ativo:</string>
    <string-array name="asset_type">
        <item></item>
        <item>Ambiente</item>
        <item>Pessoa</item>
        <item>Processo</item>
        <item>Tecnologia</item>
    </string-array>

    <string name="latitude_label">Latitude:</string>
    <string name="longitude_label">Longitude:</string>
    <string name="accuracy_label">Precisão:</string>
    <string name="get_location">Buscar localização</string>

    <string name="perimeter_label">Perímetro:</string>
    <string-array name="perimeter">
        <item></item>
        <item>API</item>
        <item>API/Notebook</item>
        <item>API/Teclado</item>
    </string-array>

    <string name="start_updates">Iniciar atualização</string>
    <string name="stop_updates">Para atualização</string>

    <string name="relevance_label">Relevância:</string>
    <string-array name="relevance">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="description_label">Descrição: </string>

    <string name="last_update_time_label">Última atualização em: </string>
    <string name="location_updated_message">Localização atualizada</string>

    <string name="scan">Scan</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_risk_manager_main">RiskManagerMainActivity</string>

    <string name="title_activity_main"></string>

    <string name="drawer_open">Abrir navigation drawer</string>
    <string name="drawer_close">Fechar navigation drawer</string>

    <string-array name="itens_menu_string">
        <item>Meu Espaço</item>
        <item>Organização</item>
        <item>ERM</item>
        <item>Risco</item>
        <item>Conformidade</item>
        <item>Workflow</item>
        <item>Eventos</item>
    </string-array>

    <string name="option_frag_txt01">Frag01</string>
    <string name="option_frag_txt02">Frag02</string>
    <string name="option_frag_txt03">Frag03</string>
    <string name="option_frag_txt04">Frag04</string>

    <string name="ativo">ATIVOS\n\nGerenciar Ativos</string>
    <string name="pessoa">PESSOAS\n\nGestão de Pessoas e Grupos</string>
    <string name="projetos">PROJETOS\n\nCriar e Listar Projetos</string>
    <string name="componentesDeNegocio">COMPONENTES DE NEGÓCIO\n\n Gerenciar Componentes de Negócio</string>
    <string name="relatorios">RELATÓRIO\n\nGerar Relatórios, Modelos e Agendamentos</string>

    <string name="asset">Ativos</string>
    <string name="asset_perimeter_label">Perimetro</string>


    <string name="version">9.2.135.22</string>
    <string name="title_activity_asset_main">Ativos</string>
    <string name="select_perimeter">Selecione o perímetro</string>
    <string name="new_asset">Adicionar ativo</string>
    <string name="list_asset">Listar ativos</string>
    <string name="selected_perimeter">Perímetro selecionado:</string>

</resources>
